<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaGamesActivity">

    <TextView
        android:id="@+id/titulolista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F30202"
        android:padding="@dimen/paddin_padrao"
        android:text="@string/lista_de_jogos"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logolistafixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/paddin_padrao"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulolista" />

    <TextView
        android:id="@+id/jogolistafixo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/paddin_padrao"
        android:textSize="18sp"
        android:text="@string/nome"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/plataformalistafixo"
        app:layout_constraintStart_toEndOf="@+id/logolistafixo"
        app:layout_constraintTop_toBottomOf="@+id/titulolista" />

    <TextView
        android:id="@+id/plataformalistafixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="@dimen/paddin_padrao"
        android:text="@string/plataforma"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/notalistafixo"
        app:layout_constraintTop_toBottomOf="@+id/titulolista" />

    <TextView
        android:id="@+id/notalistafixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="@dimen/paddin_padrao"
        android:text="@string/nota"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulolista" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/logolistafixo"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListaGame"
        android:layout_width="379dp"
        android:layout_height="339dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />


</androidx.constraintlayout.widget.ConstraintLayout>